--- a/gulimall-product/src/main/resources/templates/index.html
+++ b/gulimall-product/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
     <!--头部-->
     <div class="header_head">
       <div class="header_head_box">
-        <a href="#" class="img"><img src="static/index/img/logo.jpg" /></a>
+        <a href="http://gulimall.com" class="img"><img src="static/index/img/logo.jpg" /></a>
         <b class="header_head_p">
   						<a href="#">
   							<img src="static/index/img/img_05.png" style="border-radius: 50%;"/>
@@ -115,7 +115,7 @@
         <input id="searchText" type="text" placeholder="" />
         <span style="background: url(static/index/img/img_12.png) 0 -1px;"></span>
         <!--<button><i class="glyphicon"></i></button>-->
-        <a href="#" ><img src="static/index/img/img_09.png" onclick="search()" /></a>
+        <a href="javascript:search()" ><img src="static/index/img/img_09.png" /></a>
       </div>
       <div class="header_ico">
         <div class="header_gw">
@@ -607,7 +607,7 @@
 <script type="text/javascript">
   function search() {
       var keyword=$("#searchText").val()
-      window.location.href="http://search.gulimall.com/search.html?keyword="+keyword;
+      window.location.href="http://search.gulimall.com/list.html?keyword="+keyword;
   }
 
 </script>
