--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -813,7 +813,7 @@
                     </div>
                 </div>
                 <!--分类-->
-                <div class="JD_nav_wrap">
+                <div class="JD_pre">
                     <div class="sl_key">
                         <span>分类：</span>
                     </div>
