产品检索-页面调整

--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -783,7 +783,7 @@
                 <!--品牌-->
                 <div class="JD_nav_wrap">
                     <div class="sl_key">
-                        <span>品牌：</span>
+                        <span><b>品牌：</b></span>
                     </div>
                     <div class="sl_value">
                         <div class="sl_value_logo">
@@ -815,7 +815,7 @@
                 <!--分类-->
                 <div class="JD_pre">
                     <div class="sl_key">
-                        <span>分类：</span>
+                        <span><b>分类：</b></span>
                     </div>
                     <div class="sl_value">
                             <ul>
