--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -403,8 +403,8 @@
         <a href="http://gulimall.com"><img src="static/search/image/logo1.jpg" alt=""></a>
     </div>
     <div class="header_form">
-        <input type="text" placeholder="手机"/>
-        <a href="static/search/#">搜索</a>
+        <input id="searchKeyword" type="text" placeholder="手机"/>
+        <a href="javascript:searchByKeyword()">搜索</a>
     </div>
     <div class="header_ico">
         <div class="header_gw">
@@ -789,7 +789,7 @@
                         <div class="sl_value_logo">
                             <ul>
                                 <li th:each="brand:${result.getBrands()}">
-                                    <a href="static/search/#">
+                                    <a th:href="${'javascript:searchProducts(&quot;brandId&quot;,'+brand.getBrandId()+')'}">
                                         <img th:src="${brand.getBrandImg()}" alt="">
                                         <div th:text="${brand.getBrandName()}">
                                             华为(HUAWEI)
@@ -818,15 +818,15 @@
                         <span><b>分类：</b></span>
                     </div>
                     <div class="sl_value">
-                            <ul>
-                                <li th:each="catalog:${result.getCatalogs()}">
-                                    <a href="static/search/#">
-                                        <div th:text="${catalog.getCatalogName()}">
-                                            华为(HUAWEI)
-                                        </div>
-                                    </a>
-                                </li>
-                            </ul>
+                        <ul>
+                            <li th:each="catalog:${result.getCatalogs()}">
+                                <a th:href="${'javascript:searchProducts(&quot;catalogId&quot;,'+catalog.getCatalogId()+')'}">
+                                    <div th:text="${catalog.getCatalogName()}">
+                                        华为(HUAWEI)
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                     <div class="sl_ext">
                         <a href="static/search/#">
@@ -872,7 +872,8 @@
                     <div class="sl_value">
                         <ul>
                             <li th:each="attrValue:${attr.getAttrValue()}">
-                                <a href="static/search/#" th:text="attrValue">5.56英寸及以上</a>
+                                <a th:href="${'javascript:searchProducts(&quot;attrs&quot;,&quot;'+attr.getAttrId()+'_'+attrValue+'&quot;)'}"
+                                   th:text="attrValue">5.56英寸及以上</a>
                             </li>
                         </ul>
                     </div>
@@ -2008,6 +2009,20 @@
     }, function () {
         $(this).css("color", "#727272")
     })
+
+    function searchProducts(name, value) {
+        var href = location.href;
+        if (href.indexOf("?") != -1) {
+            location.href = href + "&" + name + "=" + value;
+        } else {
+            location.href = href + "?" + name + "=" + value;
+        }
+    }
+
+    function searchByKeyword() {
+        var keyword = $("searchKeyword").val();
+        searchProducts('keyword', keyword);
+    }
 </script>
 </body>
 </html>
