--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -1249,7 +1249,7 @@
                                     < 上一页
                                 </a>
                                 <a th:attr="pn=${nav},style= ${nav==result.getPageNum()?'border: 0;color:#ee2222;background: #fff':''}"
-                                   th:each="nav:${result.getPageNavs()}">[[nav]]</a>
+                                   th:each="nav:${result.getPageNavs()}">[[${nav}]]</a>
                                 <a class="page_a" th:attr="pn=${result.getPageNum()+1}"
                                    th:if="${result.getPageNum()<result.getTotal()}">
                                     下一页 >
