--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -1251,12 +1251,12 @@
                                 <a class='page_a' th:attr="pn=${nav},style= ${nav==result.getPageNum()?'border: 0;color:#ee2222;background: #fff':''}"
                                    th:each="nav:${result.getPageNavs()}">[[${nav}]]</a>
                                 <a class="page_a" th:attr="pn=${result.getPageNum()+1}"
-                                   th:if="${result.getPageNum()<result.getTotal()}">
+                                   th:if="${result.getPageNum()<result.getTotalPages()}">
                                     下一页 >
                                 </a>
                             </span>
                             <span class="page_span2">
-                                <em>共<b th:text="${result.getTotal()}">169</b>页&nbsp;&nbsp;到第</em>
+                                <em>共<b th:text="${result.getTotalPages()}">169</b>页&nbsp;&nbsp;到第</em>
                                 <input type="number" value="1">
                                 <em>页</em>
                                 <a class="page_submit">确定</a>
