--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -1069,13 +1069,13 @@
                         <div class="filter_top_left" th:with="p=${param.sort}">
                             <a th:class="${(!#strings.isEmpty(p)&&#strings.startsWith(p,'hotScore')&&#strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
                                th:attr="style=${(#strings.isEmpty(p)||#strings.startsWith(p,'hotScore'))?'color:#FFF;border-color:#e4393c;background:#e4393c':'color:#333; border-color:#CCC;background:#FFF'}"
-                               sort='hotScore'>综合排序[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'hotScore'))?(#strings.endsWith(p,'desc')?''↓':'↑'):''}]]</a>
+                               sort='hotScore'>综合排序[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'hotScore'))?(#strings.endsWith(p,'desc')?'↓':'↑'):''}]]</a>
                             <a th:class="${(!#strings.isEmpty(p)&&#strings.startsWith(p,'saleCount')&&#strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
                                th:attr="style=${(!#strings.isEmpty(p)&&#strings.startsWith(p,'saleCount'))?'color:#FFF;border-color:#e4393c;background:#e4393c':'color:#333; border-color:#CCC;background:#FFF'}"
-                               sort='saleCount'>销量[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'saleCount'))?(#strings.endsWith(p,'desc')?''↓':'↑'):''}]]</a>
+                               sort='saleCount'>销量[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'saleCount'))?(#strings.endsWith(p,'desc')?'↓':'↑'):''}]]</a>
                             <a th:class="${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice')&&#strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
                                th:attr="style=${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice'))?'color:#FFF;border-color:#e4393c;background:#e4393c':'color:#333; border-color:#CCC;background:#FFF'}"
-                               sort='skuPrice'>价格[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice'))?(#strings.endsWith(p,'desc')?''↓':'↑'):''}]]</a>
+                               sort='skuPrice'>价格[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice'))?(#strings.endsWith(p,'desc')?'↓':'↑'):''}]]</a>
                             <a class='sort_a' href="static/search/#">评论分</a>
                             <a class='sort_a' href="static/search/#">上架时间</a>
                         </div>
