--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -1066,7 +1066,7 @@
                 <div class="filter">
                     <!--综合排序-->
                     <div class="filter_top">
-                        <div class="filter_top_left" th:with="p=${param.sort}">
+                        <div class="filter_top_left" th:with="p=${param.sort},skuPrice=${param.skuPrice}">
                             <a th:class="${(!#strings.isEmpty(p)&&#strings.startsWith(p,'hotScore')&&#strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
                                th:attr="style=${(#strings.isEmpty(p)||#strings.startsWith(p,'hotScore'))?'color:#FFF;border-color:#e4393c;background:#e4393c':'color:#333; border-color:#CCC;background:#FFF'}"
                                sort='hotScore'>综合排序[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'hotScore'))?(#strings.endsWith(p,'desc')?'↓':'↑'):''}]]</a>
@@ -1078,6 +1078,13 @@
                                sort='skuPrice'>价格[[${(!#strings.isEmpty(p)&&#strings.startsWith(p,'skuPrice'))?(#strings.endsWith(p,'desc')?'↓':'↑'):''}]]</a>
                             <a class='sort_a' href="static/search/#">评论分</a>
                             <a class='sort_a' href="static/search/#">上架时间</a>
+                            <input id="priceStart" type="number"
+                                   th:value="${#strings.isEmpty(skuPrice)?'':#strings.substringBefore(skuPrice,'_')}"
+                                   style="width:100px; margin-left:30px"/>-
+                            <input id="priceEnd" type="number"
+                                   th:value="${#strings.isEmpty(skuPrice)?'':#strings.substringAfter(skuPrice,'_')}"
+                                   style="width:100px"/>
+                            <input id="priceSearch" type='button' value="确定"/>
                         </div>
                         <div class="filter_top_right">
                             <span class="fp-text">
@@ -1186,8 +1193,10 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="static/search/#">
-                                        <i></i>
+
+                                    <a th:with="hasStock=${param.hasStock}">
+                                        <input type="checkbox" id="showHasStock"
+                                               th:checked="${#strings.equals(hasStock,1)}"/>
                                         仅显示有货
                                     </a>
                                 </li>
@@ -2097,8 +2106,21 @@
             $(ele).text($(ele).text().replace('↑', ''))
             $(ele).text($(ele).text() + '↑')
         }
-
     }
+
+    $("#priceSearch").click(function () {
+        var priceStart = $("#priceStart").val();
+        var priceEnd = $("#priceEnd").val();
+        location.href = replaceParam(location.href, 'skuPrice', priceStart + '_' + priceEnd, true);
+    })
+    $("#showHasStock").change(function () {
+        if ($(this).prop("checked")) {
+            location.href = replaceParam(location.href, 'hasStock', 1, true)
+        } else {
+            var reg = eval('/(hasStock=)([^&]*)/gi');
+            location.href = (location.href + '').replace(reg, '');
+        }
+    })
 </script>
 </body>
 </html>
