商品检索-面包屑导航条件搜索联动

--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -767,7 +767,8 @@
             </div>
         </div>
         <div class="JD_ipone_one c">
-            <a th:href="${nav.getLink()}" class="qqq" th:each="nav:${result.getNavs()}"><span th:text="${nav.getNavName()}"></span>:<span th:text="${nav.getNavValue()}"></span> x</a>
+            <a th:href="${nav.getLink()}" class="qqq" th:each="nav:${result.getNavs()}"><span
+                    th:text="${nav.getNavName()}"></span>:<span th:text="${nav.getNavValue()}"></span> x</a>
         </div>
         <i><img src="static/search/image/right-@1x.png" alt=""></i>
     </div>
@@ -784,7 +785,7 @@
             </div>
             <div class="JD_nav_logo">
                 <!--品牌-->
-                <div class="JD_nav_wrap">
+                <div class="JD_nav_wrap" th:if="${#strings.isEmpty(param.brandId)}">
                     <div class="sl_key">
                         <span><b>品牌：</b></span>
                     </div>
@@ -868,15 +869,17 @@
                     </div>
                 </div>
                 <!--商品属性-->
-                <div class="JD_pre" th:each="attr: ${result.getAttrs()}" >
+                <div class="JD_pre" th:if="${!#lists.contains(result.getAttrIds(), attr.getAttrId())}"
+                     th:each="attr: ${result.getAttrs()}">
                     <div class="sl_key">
                         <span th:text="${attr.getAttrName()}">系统：</span>
                     </div>
                     <div class="sl_value">
                         <ul>
                             <li th:each="val: ${attr.getAttrValue()}">
-                                <a href="#"  th:text="${val}"
-                                   th:href="${'javascript:searchProducts(&quot;attrs&quot;,&quot;'+attr.attrId+'_'+val+'&quot;)'}">0-安卓（Android）</a></li>
+                                <a href="#" th:text="${val}"
+                                   th:href="${'javascript:searchProducts(&quot;attrs&quot;,&quot;'+attr.attrId+'_'+val+'&quot;)'}">0-安卓（Android）</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -2027,16 +2030,17 @@
 
     function searchProducts(name, value) {
         var href = location.href;
-        if (href.indexOf("?") != -1) {
-            location.href = href + "&" + name + "=" + value;
-        } else {
-            location.href = href + "?" + name + "=" + value;
-        }
+        // if (href.indexOf("?") != -1) {
+        //     location.href = href + "&" + name + "=" + value;
+        // } else {
+        //     location.href = href + "?" + name + "=" + value;
+        // }
+        location.href = replaceParam(href, name, value, false)
     }
 
     function searchByKeyword() {
         var keyword = $("#searchKeyword").val();
-        searchProducts('keyword', keyword);
+        location.href = replaceParam(location.href, 'keyword', keyword, false)
     }
 
     $(".page_a").click(
