--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -1223,7 +1223,7 @@
                                 <a href="static/search/#">关注</a>
                             </div>
                             <p class="da">
-                                <a th:href="|http://item.gulimall.com/${product.getSkuId()}|"
+                                <a th:href="|http://item.gulimall.com/${product.getSkuId()}.html|"
                                    title="购买AppleCare+，获得原厂2年整机保修(含电池)，和多达2次意外损坏的保修服务。购买勾选：保障服务、原厂保2年。">
                                     <img th:src="${product.getSkuImg()}" class="dim">
                                 </a>
@@ -1236,7 +1236,7 @@
                                 <span th:text="${'¥' + product.getSkuPrice()}">¥5199.00</span>
                             </p>
                             <p class="tab_JE">
-                                <a th:href="|http://item.gulimall.com/${product.getSkuId()}|" th:utext="${product.getSkuTitle()}">
+                                <a th:href="|http://item.gulimall.com/${product.getSkuId()}.html|" th:utext="${product.getSkuTitle()}">
                                     Apple iPhone 7 Plus (A1661) 32G 黑色 移动联通电信4G手机
                                 </a>
                             </p>
