--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -429,11 +429,11 @@
 
 					<div class="imgbox">
 						<div class="probox">
-							<img class="img1" alt="" src="static/item/img/59ded626N7c4cb0a3.jpg">
+							<img class="img1" alt="" th:src="${item.skuInfoEntity.skuDefaultImg}" src="static/item/img/59ded626N7c4cb0a3.jpg">
 							<div class="hoverbox"></div>
 						</div>
 						<div class="showbox">
-							<img class="img1" alt="" src="static/item/img/59ded626N7c4cb0a3.jpg">
+							<img class="img1" th:src="${item.skuInfoEntity.skuDefaultImg}" alt="" src="static/item/img/59ded626N7c4cb0a3.jpg">
 						</div>
 					</div>
 
@@ -441,15 +441,7 @@
 
 						<div class="box-lh-one">
 							<ul>
-								<li><img src="static/item/img/59ded62eN64a9784c.jpg" /></li>
-								<li><img src="static/item/img/59ded626Ne3c69b70.jpg" /></li>
-								<li><img src="static/item/img/59ded626N7c4cb0a3.jpg" /></li>
-								<li><img src="static/item/img/59ded626Ne3c69b70.jpg" /></li>
-								<li><img src="static/item/img/59ded62dN7e28abc5 (1).jpg" /></li>
-								<li><img src="static/item/img/59ded62cN6e9ac17c.jpg" /></li>
-								<li><img src="static/item/img/59ded620Nfc0ab489.jpg" /></li>
-								<li><img src="static/item/img/59ded60eN3110f3a8.jpg" /></li>
-								<li><img src="static/item/img/59ded62dNfed003a8.jpg" /></li>
+								<li th:each="img:${item.getImages()}" th:if="${img.getImgUrl()!=null}"><img th:src="${img.getImgUrl()}" src="static/item/img/59ded62eN64a9784c.jpg" /></li>
 							</ul>
 						</div>
 						<div id="left">
@@ -482,7 +474,7 @@
 						<div class="box-name" th:text="${item.skuInfoEntity.getSkuTitle()}">
 							华为 HUAWEI Mate 10 6GB+128GB 亮黑色 移动联通电信4G手机 双卡双待
 						</div>
-						<div class="box-hide" th:>预订用户预计11月30日左右陆续发货！麒麟970芯片！AI智能拍照！
+						<div class="box-hide" th:test="${item.skuInfoEntity.getSkuSubtitle()}">预订用户预计11月30日左右陆续发货！麒麟970芯片！AI智能拍照！
 							<a href="static/item/"><u>优惠信息请点击</u></a>
 						</div>
 						<div class="box-yuyue">
@@ -509,7 +501,7 @@
 								<li>京东价</li>
 								<li>
 									<span>￥</span>
-									<span>4499.00</span>
+									<span th:text="${#numbers.formatDecimal()   item.skuInfoEntity.getPrice()}">4499.00</span>
 								</li>
 								<li>
 									预约享资格
