--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -610,11 +610,11 @@
                 </div>
                 <div class="box-attr-3">
                     <div class="box-attr clear" th:each="attr:${item.saleAttr}">
-                        <dl th:with="attrValues = ${#strings.listSplit(attr.attrValues,',')}">
+                        <dl th:with="attrValueWithSkuIds = ${attr.getAttrValuesWithSkuId()}">
                             <dt>选择[[${attr.attrName}]]</dt>
-                            <dd th:each="attrValue:${attrValues}">
-                                <a href="static/item/#">
-                                    [[${attrValue}]]
+                            <dd th:each="attrValueWithSkuId:${attrValueWithSkuIds}">
+                                <a th:attr="skuIds=${attrValueWithSkuId.skuIds},class=${#lists.contains(#strings.listSplit(attrValueWithSkuId.skuIds,','),item.skuInfoEntity.getSkuId().toString())?'sku_attr_value checked':'sku_attr_value'}">
+                                    [[${attrValueWithSkuId.attrValue}]]
                                     <!--                                    <img src="static/item/img/59ddfcb1Nc3edb8f1.jpg" th:text="${attrValue}"/>-->
                                 </a>
                             </dd>
@@ -1292,6 +1292,11 @@
 <script src="static/item/js/jquery1.9.js" type="text/javascript" charset="utf-8"></script>
 <script src="static/item/js/js.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
+    $(function() {
+        $(".sku_attr_value"")
+    })
+
+
 </script>
 
 </html>
