--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -1292,9 +1292,29 @@
 <script src="static/item/js/jquery1.9.js" type="text/javascript" charset="utf-8"></script>
 <script src="static/item/js/js.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
-    $(function() {
+
+    $(function () {
         $(".sku_attr_value").parent().attr("style", "border:1px solid #ccc;");
         $("a[class='sku_attr_value checked']").parent().attr("style", "border:1px solid red;");
+    })
+    $(".sku_attr_value").click(function () {
+        // 当前元素添加clickClass
+        $(this).addClass('click')
+        var spuIdsArray = [];
+        // 当前元素spuId数组放入新数组spuIdsArray
+        spuIdsArray.push($(this).attr('skuIds').split(','))
+        // 去除同一行所有checked
+        $(this).parent().parent().find(".sku_attr_value checked").removeClass('checked');
+        // 遍历所有代带checkedclass的元素，将spuId数组放入spuIdsArray
+        $(".sku_attr_value checked").each(function () {
+            spuIdsArray.push($(this).attr('skuIds').split(','))
+        })
+        var filterEle = spuIdsArray[0];
+        for (var i = 1; i < spuIdsArray.length; i++) {
+            filterEle = $(filterEle).push(spuIdsArray[i]);
+        }
+        location.href = "http://item.gulimall.com/" + filterEle[0] + ".html"
+
     })
 
 
