商品详情前台销售属性组合跳转

--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -1314,8 +1314,7 @@
         for (var i = 1; i < spuIdsArray.length; i++) {
             filterEle = $(filterEle).filter(spuIdsArray[i]);
         }
-        console.log(filterEle[0]);
-        // location.href = "http://item.gulimall.com/" + filterEle[0] + ".html"
+        location.href = "http://item.gulimall.com/" + filterEle[0] + ".html"
     })
 
 
