--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -58,6 +58,10 @@
 						请输入账户名和密码
 					</div>
 					<form action="/login" method="post">
+						<div class="tips" style="color:red"
+							 th:text="${error!=null?(error.containsKey('msg')?error.msg:''):''}">
+
+						</div>
 						<ul>
 							<li class="top_1">
 								<img src="static/login/JD_img/user_03.png" class="err_img1" />
