--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -64,11 +64,11 @@
 						<ul>
 							<li class="top_1">
 								<img src="static/login/JD_img/user_03.png" class="err_img1" />
-								<input name="userName" type="text" placeholder=" 邮箱/用户名/已验证手机" class="user" />
+								<input name="loginacct" type="text" placeholder=" 邮箱/用户名/已验证手机" class="user" />
 							</li>
 							<li>
 								<img src="static/login/JD_img/user_06.png" class="err_img2" />
-								<input password="password" type="password" placeholder=" 密码" class="password" />
+								<input name="password" type="password" placeholder=" 密码" class="password" />
 							</li>
 							<li class="bri">
 								<a href="static/login/">忘记密码</a>
