--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -81,8 +81,7 @@
 					<ul>
 						<li>
 							<a href="static/login/#">
-								<img src="static/login/JD_img/qq.png" />
-								<span>QQ</span>
+								<img src="static/login/JD_img/weibo.png" />
 							</a>
 						</li>
 						<li class="f4"> | </li>
