--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -80,8 +80,8 @@
 				<div class="si_out">
 					<ul>
 						<li>
-							<a href="static/login/#">
-								<img src="static/login/JD_img/weibo.png" />
+							<a href="https://api.weibo.com/oauth2/authorize?client_id=YOUR_CLIENT_ID&response_type=code&redirect_uri=YOUR_REGISTERED_REDIRECT_URI">
+								<img style="width: 50px;height: 18px" src="static/login/JD_img/weibo.png" />
 							</a>
 						</li>
 						<li class="f4"> | </li>
