--- a/gulimall-product/src/main/resources/templates/index.html
+++ b/gulimall-product/src/main/resources/templates/index.html
@@ -99,7 +99,7 @@
                     <a href="http://auth.gulimall.com/login.html" th:if="${session.loginUser == null}">你好，请登录</a>
                 </li>
                 <li>
-                    <a href=" http://auth.gulimall.com/reg.html" class="li_2">免费注册</a>
+                    <a href=" http://auth.gulimall.com/reg.html" th:if="${session.loginUser == null}" class="li_2">免费注册</a>
                 </li>
                 <span>|</span>
                 <li>
