--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -80,7 +80,7 @@
 				<div class="si_out">
 					<ul>
 						<li>
-							<a href="https://api.weibo.com/oauth2/authorize?client_id=YOUR_CLIENT_ID&response_type=code&redirect_uri=YOUR_REGISTERED_REDIRECT_URI">
+							<a href="https://api.weibo.com/oauth2/authorize?client_id=3826431200&response_type=code&redirect_uri=http%3A%2F%2Fauth.gulimall.com%2Foauth2.0%2Fweibo%2Fsuccess">
 								<img style="width: 50px;height: 18px" src="static/login/JD_img/weibo.png" />
 							</a>
 						</li>
