--- a/gulimall-test-sso-server/src/main/resources/templates/login.html
+++ b/gulimall-test-sso-server/src/main/resources/templates/login.html
@@ -5,11 +5,12 @@
     <title>Server Login</title>
 </head>
 <body>
-   <form action="/login" method="post">
-       <input type="text" name="username" placeholder="username">
-       <input type="password" name="password" placeholder="password">
-       <input type="submit" value="login">
-   </form>
+<form action="/login" method="post">
+    <input type="text" name="username" placeholder="username">
+    <input type="password" name="password" placeholder="password">
+    <input  name="res_redirect" th:value="${res_redirect}">
+    <input type="submit" value="login">
+</form>
 
 </body>
 </html>
