购物车服务-商品加入购物车

--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -641,7 +641,7 @@
                         </div>
                     </div>
                     <div class="box-btns-two">
-                        <a href="static/item/../商品分类\index.html">
+                        <a href="http://cart.gulimall.com/addToCart">
                             立即预约
                         </a>
                     </div>
