购物车服务-删除商品

--- a/gulimall-cart/src/main/resources/templates/cartList.html
+++ b/gulimall-cart/src/main/resources/templates/cartList.html
@@ -122,7 +122,7 @@
                                     ￥22995.00</p>
                             </li>
                             <li>
-                                <p>删除</p>
+                                <p class="deleteItemBtn" th:attr="skuId=${item.skuId}">删除</p>
                             </li>
                         </ol>
                     </div>
@@ -173,7 +173,7 @@
         </dl>
     </div>
     <div>
-        <button type="button">删除</button>
+        <button type="button" onclick="deleteItem()">删除</button>
 
     </div>
 </div>
@@ -777,5 +777,13 @@
         var count = $(this).parent().find(".countOpsNum").text();
         location.href = "http://cart.gulimall.com/countItem?skuId=" + skuId + "&count=" + count;
     })
+    var deleteId = 0
+    $(".deleteItemBtn").click(function () {
+        deleteId = $(this).attr("skuId");
+    })
+
+    function deleteItem() {
+        location.href = "http://cart.gulimall.com/deleteItem?skuId=" + skuId;
+    }
 </script>
 </html>
