--- a/gulimall-cart/src/main/resources/templates/success.html
+++ b/gulimall-cart/src/main/resources/templates/success.html
@@ -92,7 +92,7 @@
                         <div class="clr"></div>
                         <div class="bg_shop">
                             <a class="btn-tobback" th:href="'http://item.gulimall.com:8084/'+${item?.skuId}+'.html'">查看商品详情</a>
-                            <a class="btn-addtocart" href="http://cart.gulimall.cn/cart.html"
+                            <a class="btn-addtocart" href="http://cart.gulimall.com/cart.html"
                                id="GotoShoppingCart"><b></b>去购物车结算</a>
                         </div>
                     </div>
