--- a/gulimall-order/src/main/resources/templates/confirm.html
+++ b/gulimall-order/src/main/resources/templates/confirm.html
@@ -603,8 +603,8 @@
         <span>新增收货地址</span>
     </div>
     <!--地址-->
-    <div class="top-3" th:each="addr:${orderConfirm.getAddress()}">
-        <p>[[${addr.getName()}]]</p><span>[[${addr.getName()}]]  [[${addr.getProvince()}]]  [[${addr.getCity()}]] [[${addr.getDetailAddress()}]] [[${addr.getPhone()}]]</span>
+    <div class="top-3 addr-item" th:each="addr:${orderConfirm.getAddress()}">
+        <p class="addr" th:attr="addrId=${addr.getId()}" >[[${addr.getName()}]]</p><span>[[${addr.getName()}]]  [[${addr.getProvince()}]]  [[${addr.getCity()}]] [[${addr.getDetailAddress()}]] [[${addr.getPhone()}]]</span>
     </div>
     <p class="p2">更多地址︾</p>
     <div class="hh1"/>
@@ -973,6 +973,12 @@
             $('.h-r-1').css('display', 'none')
         })
     })
+
+    $(".addr").click(function () {
+        $(".addr p").attr("border: 2px solid black;")
+        $(this).attr("border: 2px solid red;")
+    })
+
 
 
 </script>
