--- a/gulimall-order/src/main/resources/templates/confirm.html
+++ b/gulimall-order/src/main/resources/templates/confirm.html
@@ -604,7 +604,7 @@
     </div>
     <!--地址-->
     <div class="top-3 addr-item" th:each="addr:${orderConfirm.getAddress()}">
-        <p class="addr" th:attr="addrId=${addr.getId()}" >[[${addr.getName()}]]</p><span>[[${addr.getName()}]]  [[${addr.getProvince()}]]  [[${addr.getCity()}]] [[${addr.getDetailAddress()}]] [[${addr.getPhone()}]]</span>
+        <p class="addr" th:attr="def=${addr.getDefaultStatus()},addrId=${addr.getId()}">[[${addr.getName()}]]</p><span>[[${addr.getName()}]]  [[${addr.getProvince()}]]  [[${addr.getCity()}]] [[${addr.getDetailAddress()}]] [[${addr.getPhone()}]]</span>
     </div>
     <p class="p2">更多地址︾</p>
     <div class="hh1"/>
@@ -972,12 +972,23 @@
         }, function () {
             $('.h-r-1').css('display', 'none')
         })
+        highLight();
     })
+    function highLight(){
+        $(".addr-item p").css({"border":"2px solid gray"});
+        $(".addr-item p[def='1']").css({"border":"2px solid red"});
+    }
+
 
     $(".addr").click(function () {
-        $(".addr p").attr("border: 2px solid black;")
-        $(this).attr("border: 2px solid red;")
+        $(".addr-item p").css({"border":"2px solid gray"});
+        $(this).css({"border": "2px solid red"});
+
+
+        $.get("http://ware.gulimall.com/api/ware/wareinfo/fare?addrId=")
     })
+
+
 
 
 
