--- a/gulimall-order/src/main/resources/templates/confirm.html
+++ b/gulimall-order/src/main/resources/templates/confirm.html
@@ -737,7 +737,7 @@
 
     <div class="yfze">
         <p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥ <b id="payPriceEle">[[${#numbers.formatDecimal(orderConfirm.getPayPrice(),1,2)}]]</b></span></p>
-        <p class="yfze_b">寄送至：  收货人：</p>
+        <p class="yfze_b">寄送至：<b id="receiveAddressEle"></b> 收货人：<b id="receiverEle"></b></p>
     </div>
     <button class="tijiao">提交订单</button>
 </div>
@@ -990,10 +990,12 @@
 
     function getFare(addrId) {
         $.get("http://ware.gulimall.com/api/ware/wareinfo/fare?addrId="+addrId,function (data) {
-            $("#fareEle").text(data.data);
+            $("#fareEle").text(data.data.fare);
             var total = [[${orderConfirm.getTotal()}]];
-            var payPrice = total*1 +data.data*1
+            var payPrice = total*1 +data.data.fare*1
             $("#payPriceEle").text(payPrice);
+            $("#receiveAddressEle").text(data.data.addressVo.province+" "+data.data.addressVo.detailAddress);
+            $("#receiverEle").text(data.data.addressVo.name);
         })
     }
 
